--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "dayjs": "^1.10.7",
     "lorem-ipsum": "^2.0.4",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
